Salesforce Project/force-app/main/default/objects/Festival_Offer__c/Festival_Offer__c.object-meta.xml
<CustomObject>
    <label>Festival Offer</label>
    <nameField>
        <label>Festival Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festival Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>