Salesforce Project/force-app/main/default/objects/Festival_Offer__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount applied to product.</description>
    <inlineHelpText>Discount applied to product.</inlineHelpText>
    <label>Discount %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>