Salesforce Project/force-app/main/default/objects/Festival_Offer__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Festival Offers</relationshipLabel>
    <relationshipName>Festival_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>