Salesforce Project/force-app/main/default/objects/Festival_Offer__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <description>Name of the promotion</description>
    <inlineHelpText>Name of the promotion</inlineHelpText>
    <label>Offer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diwali</fullName>
            </value>
            <value>
                <fullName>Holi</fullName>
            </value>
            <value>
                <fullName>Pongal</fullName>
            </value>
            <value>
                <fullName>Dussehra</fullName>
            </value>
            <value>
                <fullName>Ram Navami</fullName>
            </value>
            <value>
                <fullName>Krishna Janmashtami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>