Salesforce Project/force-app/main/default/objects/Festival_Offer__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <description>Start and end date of the offer. Helps manage marketing campaigns.</description>
    <inlineHelpText>Start and end date of the offer. Helps manage marketing campaigns.</inlineHelpText>
    <label>Validity</label>
    <type>Date</type>
</CustomField>