Salesforce Project/force-app/main/default/objects/Festival_Offer__c/validationRules/Date_Validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validity</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>Validity__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>