Salesforce Project/force-app/main/default/objects/Festival_Offer__c/validationRules/Discount_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Discount__c &gt;= 0, Discount__c &lt; 100)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount must be between 1% and 100%.</errorMessage>
</ValidationRule>